tests/expectations/compiler/function/duplicate_parameter_fail.out
DCE_ENABLED:
Error [EAST0372009]: variable `a` shadowed by
    --> compiler-test:3:29
     |
   3 |     transition main(a: u32, a: u32) -> u32 {
     |                             ^

DCE_DISABLED:
Error [EAST0372009]: variable `a` shadowed by
    --> compiler-test:3:29
     |
   3 |     transition main(a: u32, a: u32) -> u32 {
     |                             ^
